removing paperclip views

--- a/public/extra.html
+++ b/public/extra.html
@@ -1,5 +1,8 @@
 0B7tWnRpoXC-zNjFkNDMxZTQtN2FlZC00ODBiLTg3ZTgtZDYwMDY3Yzc5MDM2&hl=en_US&embedded=true
 
+<%= image_tag @project.project_pic_large.url %>	     
+<!-- <%= image_tag project.project_pic_small.url %>	      -->
+
 
 <div bgcolor="white" lang="EN-US">
 
